--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+      <div class="container">
+        <div class="hero">
+        <div class="header">
+            <h1>AI Image Generator Tool Javascript</h1>
+            <p>Generates images using API javascript</p>
+        </div>
+        <form action="#" class="form">
+            <input type="text" placeholder="Add description of images">
+            <select name="selection" id="selection">
+                <option value="Image-1">Image 1</option>
+                <option value="Image-2">Image 2</option>
+                <option value="Image-3">Image 3</option>
+                <option value="Image-4">Image 4</option>
+            </select>
+            <button type="submit" class="btn">Generate</button>
+        </form>
+    </div>
+      </div>
 </body>
 </html>
