--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             </select>
             <button type="submit" class="btn">Generate</button>
         </form>
+
+        <figure class="img-section">
+            <img src="img.avif" alt="img1">
+            <a href="#" class="download-btn"></a>
+            <img src="img.avif" alt="img2">
+            <a href="#" class="download-btn"></a>
+            <img src="img.avif" alt="img3">
+            <a href="#" class="download-btn"></a>
+            <img src="img.avif" alt="img4">
+            <a href="#" class="download-btn"></a>
+        </figure>
     </div>
       </div>
 </body>
