--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/7e22486cc7.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -20,10 +21,10 @@
         <form action="#" class="form">
           <input type="text" placeholder="Add description of images" />
           <select name="selection" id="selection">
-            <option value="Image-1">Image 1</option>
-            <option value="Image-2">Image 2</option>
-            <option value="Image-3">Image 3</option>
-            <option value="Image-4">Image 4</option>
+            <option value="1">Image 1</option>
+            <option value="2">Image 2</option>
+            <option value="3">Image 3</option>
+            <option value="4">Image 4</option>
           </select>
           <button type="submit" class="btn">Generate</button>
         </form>
