--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
         </form>
 
         <figure class="img-section">
-          <div>
+          <div class="img-card">
             <img src="img.avif" alt="img1" />
             <a href="#" class="download-btn"
               ><i class="fa-solid fa-download"></i
             ></a>
           </div>
-          <div>
+          <div class="img-card">
             <img src="img.avif" alt="img2" />
             <a href="#" class="download-btn"
               ><i class="fa-solid fa-download"></i
             ></a>
           </div>
-          <div>
+          <div class="img-card">
             <img src="img.avif" alt="img3" />
             <a href="#" class="download-btn"
               ><i class="fa-solid fa-download"></i
             ></a>
           </div>
-          <div>
+          <div class="img-card">
             <img src="img.avif" alt="img4" />
             <a href="#" class="download-btn"
               ><i class="fa-solid fa-download"></i
